# envcage

./: .env  Cargo.toml  README.md  test_db.sh  test_payload.json
.github/workflows/: rust.yml
envcage-domain/: Cargo.toml
envcage-domain/migrations/2020-10-30-215553_create_device/: up.sql
envcage-domain/migrations/2020-10-30-215600_create_envlog/: down.sql  up.sql
envcage-domain/src/: lib.rs  models.rs  schema.rs
envcage-domain/src/src/: schema.rs
envcage-recorder/: Cargo.toml
envcage-recorder/src/: error.rs  main.rs  payload.rs
envcage-tools/: Cargo.toml
envcage-tools/src/: approve.rs  lib.rs  list_entries.rs  list_unapproved.rs  main.rs
firmware/EnvCageMonitor/: platformio.ini
firmware/EnvCageMonitor/src/: main.cpp  ssid.h  ssid.h.template
migrations/2020-10-30-215553_create_device/: up.sql
migrations/2020-10-30-215600_create_envlog/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs
