[package]
name = "envcage"
version = "0.1.0"
authors = ["rhay <me@russellhay.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = "0.2.0"
dotenv = "0.15.0"
diesel = { version = "1.4.5", features = [ "postgres" ] }
log = "0.4.11"
env_logger = "0.8.1"
