[package]
name = "envcage-recorder"
version = "0.1.0"
authors = ["Russell Hay <russell.hay@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = "0.2.0"
log = "0.4.11"
env_logger = "0.8.1"
structopt = "0.3.20"
dotenv = "0.15.0"
envcage-tools = { path = "../envcage-tools" }
envcage-domain = { path = "../envcage-domain" }
diesel = { version = "1.4.5", features = [ "postgres" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
chrono = { version = "0.4.19", features = [ "serde" ] }
