[package]
name = "envcage-tools"
version = "0.1.0"
authors = ["Russell Hay <russell.hay@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envcage-domain = { path = "../envcage-domain"}
log = "0.4.11"
env_logger = "0.8.1"
chrono = "0.4.19"
structopt = "0.3.20"
dotenv = "0.15.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "eg-unapproved"
path = "src/list_unapproved.rs"

[[bin]]
name = "eg-approval"
path = "src/approve.rs"

[[bin]]
name = "eg-entries"
path = "src/list_entries.rs"

[[bin]]
name = "eg-devices"
path = "src/main.rs"